--- a/page1.css
+++ b/page1.css
@@ -126,14 +126,20 @@ header img {
 .page h2 {
   font-size: 12px;
   margin-bottom: 5px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .page h4 {
   font-weight: 300;
   font-size: 13px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .page .V1 {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   flex-direction: row;
   background-color: white;
@@ -155,6 +161,14 @@ header img {
   animation-name: spin;
   animation-duration: 900ms;
   animation-timing-function: linear;
+}
+.page .V2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  flex-wrap: nowrap;
+  overflow: hidden;
 }
 .page .vtexte {
   display: flex;
@@ -178,7 +192,6 @@ header img {
 .page strong {
   display: flex;
   align-items: center;
-  padding: 25px 20px 25px 0px;
 }
 .page .check {
   background-color: #99E2D0;
@@ -345,9 +358,14 @@ footer .fa-utensils {
     background-color: #99E2D0;
     display: flex;
     align-items: center;
-    padding: 10px;
+    padding: 20px;
     border-radius: 0 20px 20px 0px;
     margin-right: -70px;
+  }
+  .page .fa-sharp {
+    opacity: 1;
+    color: white;
+    font-size: 30px;
   }
   .page .vignette {
     width: 100%;
@@ -355,25 +373,27 @@ footer .fa-utensils {
   .page .cartes {
     display: flex;
     flex-direction: row;
-    gap: 50px;
+    gap: 80px;
     justify-content: space-around;
     justify-content: center;
     width: 100%;
   }
   .page .groupe {
     height: 100%;
+    width: 100%;
+    max-width: 236px;
   }
   .page .V1 {
     display: flex;
     flex-direction: row;
     font-size: 17px;
-    width: 100%;
+    width: 150%;
     flex-wrap: nowrap;
-    max-width: 300px;
+    max-width: 249px;
   }
   .page .vtexte h2,
 .page .vtexte h4 {
-    font-size: 12px;
+    font-size: 11px;
   }
   .page .vtexte {
     display: flex;
@@ -381,14 +401,34 @@ footer .fa-utensils {
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    padding: 0;
   }
 }
-@media (min-width: 1100px) {
-  .page .cartes {
-    gap: 40px;
+@media (min-width: 1000px) {
+  .page .V1 {
+    gap: 5px;
+  }
+  .bouton button {
+    margin-left: 55px;
+  }
+  .page .check {
+    background-color: #99E2D0;
+    display: flex;
+    align-items: center;
+    padding: 15px;
+    border-radius: 0 20px 20px 0px;
+    margin-right: -60px;
+  }
+  .page .fa-sharp {
+    opacity: 1;
+    color: white;
+    font-size: 30px;
   }
 }
 @media (min-width: 1200px) {
+  .bouton button {
+    margin-left: 50px;
+  }
   .page {
     top: 450px;
     padding: 20px 100px;
@@ -400,12 +440,25 @@ footer .fa-utensils {
     display: flex;
     flex-direction: row;
     font-size: 20px;
-    width: 100%;
     flex-wrap: nowrap;
+    gap: 7px;
+  }
+  .page .check {
+    background-color: #99E2D0;
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    border-radius: 0 20px 20px 0px;
+    margin-right: -70px;
+  }
+  .page .fa-sharp {
+    opacity: 1;
+    color: white;
+    font-size: 30px;
   }
   .page .vtexte h2,
 .page .vtexte h4 {
-    font-size: 18px;
+    font-size: 11px;
   }
 }
 @media (min-width: 1350px) {
@@ -414,8 +467,21 @@ footer .fa-utensils {
     flex-direction: row;
     font-size: 20px;
     width: 100%;
-    gap: 40px;
+    gap: 15px;
     flex-wrap: nowrap;
+  }
+  .page .check {
+    background-color: #99E2D0;
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    border-radius: 0 20px 20px 0px;
+    margin-right: -70px;
+  }
+  .page .fa-sharp {
+    opacity: 1;
+    color: white;
+    font-size: 30px;
   }
 }
 
