--- a/sass/style.scss
+++ b/sass/style.scss
@@ -41,7 +41,7 @@ body{
     place-items: center;
     position: fixed;
     background-color:#363636; 
-    height: 800px;
+    height: 100%;
     inset: 0;
     z-index: 5;
     opacity: 0.9;
@@ -165,7 +165,10 @@ header{
         background-color:#9356DC;
         color: white;
         border-radius: 50%;
-        padding: 10px;
+        height: 35px;
+        width: 35px;
+        align-items: center;
+        justify-content: center;
         font-size: 100%;
         
     }
@@ -220,6 +223,10 @@ header{
         border-radius: 5px;
     
     }
+    a{
+        text-decoration: none;
+        color: black;
+    }
 
     .cartes{
         display: flex;
@@ -227,6 +234,7 @@ header{
         flex-direction: column;
         width: 100%;
         margin-bottom: 50px;
+        cursor: pointer;
     }
 
     .carte{
@@ -362,8 +370,8 @@ header{
 
     .vignette .chiffres {
         padding-right: 440px;
-        padding-bottom: 90px;
-        gap: 95px;
+        padding-bottom: 10px;
+        gap: 75px;
     }
 
     .vignette p{
