--- a/sass/style.scss
+++ b/sass/style.scss
@@ -125,7 +125,6 @@ header{
   .vignette{
 
     font-size: 100%;
-    margin-bottom: 50px;
   
     ul{
         gap: 20px;
@@ -151,12 +150,20 @@ header{
         
     }
 
+    ul{
+        flex-direction: column;
+        display: flex;
+        align-items: center;
+        width: 100%;
+
+    }
+
     
     .chiffres{
         position:absolute;
         z-index:1;
-        gap: 48px;
-        padding-right: 250px;
+        margin-left: -40px;
+        margin-top: -5px;
         
     }
 
@@ -165,8 +172,9 @@ header{
         background-color:#9356DC;
         color: white;
         border-radius: 50%;
-        height: 35px;
-        width: 35px;
+        height: 23px;
+        width: 23px;
+        display: flex;    
         align-items: center;
         justify-content: center;
         font-size: 100%;
@@ -174,11 +182,13 @@ header{
     }
 
     li{
+        width: 150px;
         
         padding: 25px 50px;
         background-color:#fafafa;
         border-radius: 20px;
         font-weight: 550;
+        font-size: 11px;
         list-style: none;
         display: flex;
         box-shadow: 0 0 16px #0000002e;
@@ -280,6 +290,7 @@ header{
         display: flex;
         flex-direction: column;
         justify-content: center; 
+        
     }
 
     h3{
@@ -317,6 +328,8 @@ header{
         animation: heart 700ms;
         
     }
+
+    
 
 
    
@@ -366,21 +379,30 @@ header{
     .vignette li {
         font-size: 20px;
         padding: 50px 110px;
+        width: 280px;
     }
 
     .vignette .chiffres {
-        padding-right: 440px;
-        padding-bottom: 10px;
-        gap: 75px;
+        
+        margin-left: -90px;
     }
 
     .vignette p{
-        padding: 20px;
+        width: 35px;
+        height: 35px;
         font-size: 20px;
     }
 
     .vignette .txt {
         justify-content: space-around;
+    }
+
+    .txt ul{
+        display: flex;
+        flex-direction: column;
+    }
+    .txt li{
+        font-size: 20px;
     }
  }
 
@@ -388,6 +410,10 @@ header{
     .haut-de-page h1 {
         font-size: 35px;
         font-weight: 750;
+    }
+
+    .page .titre1{
+        padding: 0;
     }
 
     .localisation{
@@ -413,6 +439,10 @@ header{
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
+    }
+    .txt ul{
+        display: flex;
+        flex-direction: column;
     }
 
  }
@@ -461,5 +491,23 @@ header{
 
     .vignette .txt {
         flex-direction: row;
+    }
+
+    .txt ul{
+        display: flex;
+        flex-direction: row;
+    }
+
+    .txt li{
+        font-size: 12px;
+    }
+ }
+
+ @media (min-width:  1200px){
+    .txt ul{
+        gap: 100px;
+    }
+    .txt li{
+        align-items: center;
     }
  }
