--- a/Reneuve_Mehdi_Projet_3/sass/page1.scss
+++ b/Reneuve_Mehdi_Projet_3/sass/page1.scss
@@ -79,6 +79,7 @@ header{
         width: 100%;
         display: flex;
         flex-wrap: wrap;
+        height: 1000px;
     }
 }
 
@@ -91,7 +92,7 @@ header{
     padding: 40px;
     background-color: white;
     z-index: 1;
-    border-radius: 40px;
+    border-radius: 40px 40px 0px 0px;
     top: 180px;
 
     .fa-heart{
