--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ header img {
 
 .titre1 {
   padding-top: 30px;
-  padding-bottom: 50px;
+  padding-bottom: 30px;
   margin-left: 15px;
   font-size: 12px;
 }
@@ -133,7 +133,7 @@ header img {
 .vignette .chiffres {
   position: absolute;
   z-index: 1;
-  margin-left: -40px;
+  margin-left: -60px;
   margin-top: -5px;
 }
 .vignette p {
@@ -148,12 +148,11 @@ header img {
   font-size: 100%;
 }
 .vignette li {
-  width: 150px;
+  width: 82%;
   padding: 25px 50px;
   background-color: #fafafa;
   border-radius: 20px;
   font-weight: 550;
-  font-size: 11px;
   list-style: none;
   display: flex;
   box-shadow: 0 0 16px rgba(0, 0, 0, 0.1803921569);
@@ -167,6 +166,7 @@ header img {
 .vignette i {
   display: flex;
   margin-right: 10px;
+  justify-content: center;
 }
 
 .Back {
@@ -299,10 +299,10 @@ footer .fa-utensils {
   .vignette li {
     font-size: 20px;
     padding: 50px 110px;
-    width: 280px;
+    width: 60%;
   }
   .vignette .chiffres {
-    margin-left: -90px;
+    margin-left: -126px;
   }
   .vignette p {
     width: 35px;
