--- a/sass/style.scss
+++ b/sass/style.scss
@@ -278,7 +278,7 @@ header{
         display: flex;
         flex-direction: row;
         height: 100px;
-        justify-content: space-around;
+        margin-left: 15px;
         
 
     }
