--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ header img {
   display: flex;
   flex-direction: row;
   height: 100px;
-  justify-content: space-around;
+  margin-left: 15px;
 }
 .Back .txt {
   padding-right: 90px;
